--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ConnectBeez</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body>
-    
+    <nav>
+        <div class="nav-wrapper">
+            <div class="col-1">
+                <a class="logo-img" href="#"> <img style="width: 200px;" src="Assets/PNG/Full logo.png" alt=""></a>
+            </div>
+            <div class="col-2">
+                <ul class="nav__link">
+                    <li><a href="#">Introduction</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Features</a></li>
+                </ul>
+            </div>
+        </div>
+
+    </nav>
 </body>
+
 </html>
