--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <nav>
-        <div class="nav-wrapper">
+        <!-- <div class="nav-wrapper">
             <div class="col-1">
                 <a class="logo-img" href="#"> <img style="width: 200px;" src="Assets/PNG/Full logo.png" alt=""></a>
             </div>
@@ -21,9 +21,33 @@
                     <li><a href="#">Features</a></li>
                 </ul>
             </div>
-        </div>
+        </div> -->
+        <a class="logo-img" href="#"> <img style="width: 200px;" src="Assets/PNG/Full logo.png" alt=""></a>
 
+        <input type="checkbox" name="" id="sidebar-active">
+        <label for="sidebar-active" class="open-sidebar-button">
+            <svg xmlns="http://www.w3.org/2000/svg" height="32px" viewBox="0 -960 960 960" width="32px" fill="#000000">
+                <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" />
+            </svg>
+        </label>
+        <label id="overlay" for="sidebar-active"></label>
+        <div class="links-container">
+            <label for="sidebar-active" class="close-sidebar-button">
+                <svg xmlns="http://www.w3.org/2000/svg" height="32px" viewBox="0 -960 960 960" width="32px"
+                    fill="#000000">
+                    <path
+                        d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
+                </svg>
+            </label>
+
+            <a class="home-link" href="#">Introduction</a>
+            <a href="#">About</a>
+            <a href="#">Features</a>
+        </div>
     </nav>
+    <section style="background-color: var(--accent-color-25);width: 100%; height: 100vh;">
+
+    </section>
 </body>
 
 </html>
