--- a/index.html
+++ b/index.html
@@ -10,18 +10,6 @@
 
 <body>
     <nav>
-        <!-- <div class="nav-wrapper">
-            <div class="col-1">
-                <a class="logo-img" href="#"> <img style="width: 200px;" src="Assets/PNG/Full logo.png" alt=""></a>
-            </div>
-            <div class="col-2">
-                <ul class="nav__link">
-                    <li><a href="#">Introduction</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Features</a></li>
-                </ul>
-            </div>
-        </div> -->
         <a class="logo-img" href="#"> <img style="width: 200px;" src="Assets/PNG/Full logo.png" alt=""></a>
 
         <input type="checkbox" name="" id="sidebar-active">
@@ -48,6 +36,10 @@
     <section style="background-color: var(--accent-color-25);width: 100%; height: 100vh;">
 
     </section>
+    <footer>
+        <p>© 2024 ConnectBeez. All rights reserved.</p>
+    </footer>
 </body>
+
 
 </html>
