--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ConnectBeez</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
 </head>
 
 <body>
+    <!--Navigation Bar-->
     <nav>
         <a class="logo-img" href="#"> <img style="width: 200px;" src="Assets/PNG/Full logo.png" alt=""></a>
 
@@ -33,12 +35,188 @@
             <a href="#">Features</a>
         </div>
     </nav>
+    <!--Home-->
     <section style="background-color: var(--accent-color-25);width: 100%; height: 100vh;">
 
     </section>
+    <!--Team-->
+    <section class="swiper mySwiper">
+        <div>
+            <h3>Meet Our Team</h3>
+        </div>
+
+        <div class="swiper-wrapper">
+
+            <div class="card swiper-slide">
+                <div class="card__image">
+                    <img src="/Assets/JPG/Gokul K.jpg" alt="card image">
+                </div>
+
+                <div class="card__content">
+                    <span class="card__title">Founder & CEO</span>
+                    <span class="card__name">Gokul K</span>
+                    <p class="card__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit veritatis labore
+                        provident non tempora odio est sunt, ipsum</p>
+                    <a href="https://www.linkedin.com/in/gokul-k-49174424b/" target="_blank"><button
+                            class="card__btn">View More</button></a>
+                </div>
+            </div>
+
+            <div class="card swiper-slide">
+                <div class="card__image">
+                    <img src="/Assets/JPG/Hephzibah A.jpg" alt="card image">
+                </div>
+
+                <div class="card__content">
+                    <span class="card__title">Co-Founder</span>
+                    <span class="card__name">Hephzibah A</span>
+                    <p class="card__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit veritatis labore
+                        provident non tempora odio est sunt, ipsum</p>
+                    <a href="https://www.linkedin.com/in/hephzibaha/"><button class="card__btn">View More</button></a>
+                </div>
+            </div>
+
+            <div class="card swiper-slide">
+                <div class="card__image">
+                    <img src="/Assets/JPG/user2.jpg" alt="card image">
+                </div>
+
+                <div class="card__content">
+                    <span class="card__title">Web Developer</span>
+                    <span class="card__name">David Murphy</span>
+                    <p class="card__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit veritatis labore
+                        provident non tempora odio est sunt, ipsum</p>
+                    <button class="card__btn">View More</button>
+                </div>
+            </div>
+
+            <div class="card swiper-slide">
+                <div class="card__image">
+                    <img src="/images/user4.jpg" alt="card image">
+                </div>
+
+                <div class="card__content">
+                    <span class="card__title">Mobile Designer</span>
+                    <span class="card__name">Kelsey West</span>
+                    <p class="card__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit veritatis labore
+                        provident non tempora odio est sunt, ipsum</p>
+                    <button class="card__btn">View More</button>
+                </div>
+            </div>
+            <div class="card swiper-slide">
+                <div class="card__image">
+                    <img src="/Assets/JPG/user.jpg" alt="card image">
+                </div>
+
+                <div class="card__content">
+                    <span class="card__title">Mobile Designer</span>
+                    <span class="card__name">Kelsey West</span>
+                    <p class="card__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit veritatis labore
+                        provident non tempora odio est sunt, ipsum</p>
+                    <button class="card__btn">View More</button>
+                </div>
+            </div>
+            <div class="card swiper-slide">
+                <div class="card__image">
+                    <img src="/Assets/JPG/user.jpg" alt="card image">
+                </div>
+
+                <div class="card__content">
+                    <span class="card__title">Mobile Designer</span>
+                    <span class="card__name">Kelsey West</span>
+                    <p class="card__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit veritatis labore
+                        provident non tempora odio est sunt, ipsum</p>
+                    <button class="card__btn">View More</button>
+                </div>
+            </div>
+            <div class="card swiper-slide">
+                <div class="card__image">
+                    <img src="/Assets/JPG/user3.jpg" alt="card image">
+                </div>
+
+                <div class="card__content">
+                    <span class="card__title">Mobile Designer</span>
+                    <span class="card__name">Kelsey West</span>
+                    <p class="card__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit veritatis labore
+                        provident non tempora odio est sunt, ipsum</p>
+                    <button class="card__btn">View More</button>
+                </div>
+            </div>
+            <div class="card swiper-slide">
+                <div class="card__image">
+                    <img src="/Assets/JPG/user2.jpg" alt="card image">
+                </div>
+
+                <div class="card__content">
+                    <span class="card__title">Mobile Designer</span>
+                    <span class="card__name">Kelsey West</span>
+                    <p class="card__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit veritatis labore
+                        provident non tempora odio est sunt, ipsum</p>
+                    <button class="card__btn">View More</button>
+                </div>
+            </div>
+            <div class="card swiper-slide">
+                <div class="card__image">
+                    <img src="/Assets/JPG/user2.jpg" alt="card image">
+                </div>
+
+                <div class="card__content">
+                    <span class="card__title">Mobile Designer</span>
+                    <span class="card__name">Kelsey West</span>
+                    <p class="card__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit veritatis labore
+                        provident non tempora odio est sunt, ipsum</p>
+                    <button class="card__btn">View More</button>
+                </div>
+            </div>
+            <div class="card swiper-slide">
+                <div class="card__image">
+                    <img src="/Assets/JPG/user2.jpg" alt="card image">
+                </div>
+
+                <div class="card__content">
+                    <span class="card__title">Mobile Designer</span>
+                    <span class="card__name">Kelsey West</span>
+                    <p class="card__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit veritatis labore
+                        provident non tempora odio est sunt, ipsum</p>
+                    <button class="card__btn">View More</button>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
     <footer>
         <p>© 2024 ConnectBeez. All rights reserved.</p>
     </footer>
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
+    <!-- Initialize Swiper -->
+    <script>
+        var swiper = new Swiper(".mySwiper", {
+
+            loop: true,
+            autoplay: true,
+            autoplayTimeout: 1000,
+            autoplayHoverPause: true,
+
+            effect: "coverflow",
+            grabCursor: true,
+            centeredSlides: true,
+            slidesPerView: "auto",
+
+            coverflowEffect: {
+                rotate: 0,
+                stretch: 0,
+                depth: 300,
+                modifier: 1,
+                slideShadows: false,
+            },
+            pagination: {
+                el: ".swiper-pagination",
+            },
+        });
+    </script>
 </body>
 
 
